--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react-scripts": "0.6.1"
   },
   "dependencies": {
+    "amazeui": "^2.7.2",
     "amazeui-react": "^1.2.2",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
